--- a/package.json
+++ b/package.json
@@ -38,18 +38,15 @@
     "lucide-react": "^0.474.0",
     "next": "^14.2.24",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwind-merge": "^3.0.2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.20.1",
     "eslint-config-next": "^15.2.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.19",
+    "sass": "^1.97.1",
     "typescript": "^5.7.3"
   }
 }
